--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "extend": "^3.0.1",
     "http-errors": "~1.6.2",
+    "materialize-css": "^1.0.0-rc.1",
     "morgan": "~1.9.0",
+    "node-fetch": "^2.1.2",
     "pug": "2.0.0-beta11"
   }
 }
