--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "http-errors": "~1.6.2",
     "materialize-css": "^1.0.0-rc.1",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "node-fetch": "^2.1.2",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "request": "^2.87.0"
   }
 }
